add comments input

--- a/themes/LoveIt/layouts/_default/single.html
+++ b/themes/LoveIt/layouts/_default/single.html
@@ -19,6 +19,14 @@
         </div>
 
         {{- /* Comment */ -}}
+        <script src="https://utteranc.es/client.js"
+        repo="jungminsayho/jungminsayho.github.io"
+        issue-term="pathname"
+        label="Comment"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+        </script>
         {{- partial "comment.html" . -}}
     </div>
 {{- end -}}
